crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_deprecated_attrs__remove_attrs-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_deprecated_attrs.rs
expression: "test_config(r#\"{ \"removeDeprecatedAttrs\": {} }\"#,\nSome(r#\"<svg viewBox=\"0 0 100 100\" xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- leaves unsafe to remove deprecated `viewTarget` -->\n    <view id=\"one\" viewBox=\"0 0 100 100\" viewTarget=\"\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
    <!-- leaves unsafe to remove deprecated `viewTarget` -->
    <view id="one" viewBox="0 0 100 100" viewTarget=""/>
</svg>
